Purchases: Stop description text from jumping on page transition.

--- a/client/me/purchases/manage-purchase/style.scss
+++ b/client/me/purchases/manage-purchase/style.scss
@@ -171,6 +171,10 @@
 	display: block;
 }
 
+.plan-features__targeted-description-heading {
+	display: inline;
+}
+
 .manage-purchase__settings-link {
 	display: block;
 	margin-top: 16px;
